# nlporygon

./: .gitignore  LICENSE  README.md  pyproject.toml
nlporygon/: __init__.py  column_relationship.py  config.py  database.py  generate_prompt.py  llm_agent.py  logger.py  models.py  query_store.py  schema.py  schema_builder.py  sql_validator.py  utils.py
nlporygon/data/: sys_prompt_header.j2
nlporygon/queries/: get_fks.sql  get_pks.sql  get_tables.sql
