[project]
name = "nlporygon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "anthropic>=0.77.0",
    "duckdb==1.4.3",
    "jinja2>=3.1.6",
    "orjson>=3.11.7",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "pytz>=2025.2",
    "pyyaml>=6.0.3",
    "rbloom>=1.5.4",
    "structlog>=25.5.0",
]
